internal class AnimationStrings
{
    internal static readonly string isRunning = "isRunning";
    internal static readonly string isMoving = "isMoving";
    internal static readonly string isGrounded = "isGrounded";
    internal static readonly string isOnWall = "isOnWall";
    internal static readonly string isOnCeiling = "isOnCeiling";
    internal static readonly string yVelocity = "yVelocity";
    internal static readonly string jumpTrigger = "jump";
    internal static readonly string attackTrigger = "attack";
    internal static readonly string rangedAttackTrigger = "rangedAttack";

    internal static readonly string hitTrigger = "hit";

    internal static readonly string canMove = "canMove";
    internal static readonly string canWalk = "canWalk";
    internal static readonly string holdRope = "holdRope";
    internal static readonly string isAlive = "isAlive";
    internal static readonly string lockVelocity = "lockVelocity";
    internal static readonly string attackCooldown = "attackCooldown";
    internal static readonly string breakTrigger = "break";
    internal static readonly string shakeTrigger = "shake";
    internal static readonly string resetTrigger= "reset";
    internal static readonly string squeezeTrigger= "squeeze";

}